--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reveal-js-multiplex",
+  "name": "reveal-multiplex",
   "version": "1.0.0",
   "description": "reveal.js multiplex server",
   "homepage": "http://lab.hakim.se/reveal-js",
@@ -14,6 +14,10 @@
     "grunt-cli": "~0.1.13",
     "mustache": "~2.2.1",
     "socket.io": "~1.3.7"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/npm/npm.git"
   },
   "license": "MIT"
 }
