--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reveal-multiplex",
   "version": "1.0.0",
   "description": "reveal.js multiplex server",
-  "homepage": "http://lab.hakim.se/reveal-js",
+  "homepage": "https://github.com/fkmclane/reveal-multiplex",
   "scripts": {
     "start": "node index.js"
   },
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type" : "git",
-    "url" : "https://github.com/npm/npm.git"
+    "url" : "https://github.com/fkmclane/reveal-multiplex.git"
   },
   "license": "MIT"
 }
