--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "~4.16",
+    "express-basic-auth": "~1.1",
     "grunt-cli": "~1.2",
     "mustache": "~2.3",
     "socket.io": "~2.0"
